--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -4,13 +4,13 @@
 }
 
 window#waybar {
-  background: rgba(34, 36, 54, 0.8);
-  color: rgba(255, 255, 255, 0.95);
-  border-bottom: 2px solid #353542;
+  background: rgba(34, 36, 54, 0.75);
+  color: rgba(255, 255, 255, 0.90);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.25);
 }
 
 box {
-  margin: 0 4px 0 2px;
+  margin: 0 4px 0 4px;
   padding: 0;
 }
 
@@ -48,11 +48,10 @@ box {
 
 #workspaces button.active,
 #workspaces button.focused {
-  color: rgba(255, 255, 255, 0.95);
-  background: rgba(255, 255, 255, 0.10);
-  box-shadow: inset 0 0 12px 2px rgba(0, 0, 0, 0.5),
-              inset -1px 0 2px 0 rgba(0, 0, 0, 0.25),
-              inset 1px 0 2px 0 rgba(0, 0, 0, 0.25);
+  color: rgba(255, 255, 255, 0.9);
+  box-shadow: inset 0 0 6px 2px rgba(0, 0, 0, 0.2),
+              inset -1px 0 2px 0 rgba(0, 0, 0, 0.2),
+              inset 1px 0 2px 0 rgba(0, 0, 0, 0.2);
 }
 
 button {
