--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -19,6 +19,10 @@ box {
   margin-right: 2px;
 }
 
+#custom-active-window-class {
+  font-weight: bold;
+}
+
 .module {
   border-radius: 0 0 6px 6px;
   margin: 0 2px;
